--- a/src/App.css
+++ b/src/App.css
@@ -65,10 +65,12 @@
   height: 100%;
 }
 
-/* .btn-default{
-  border: none;
-  outline:; 
-} */
+
+@media (max-width:500px) {
+  .width-10{
+    width: 20%;
+  }
+}
 
 .bg-green{
   background-color: rgba(0, 0, 255, 0.082);
