--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,12 @@
 
 .cursor{
   cursor: grab;
+
+}
+
+.cursor:hover{
+  background-color: black;
+  color: white;
 }
 #header{
   background: linear-gradient(to right,rgba(255, 0, 0, 0.58),rgba(0, 0, 255, 0.712));
@@ -69,7 +75,7 @@
 }
 
 
-@media (max-width:500px) {
+@media (max-width:700px) {
   .width-10{
     width: 20%;
   }
